x64 compile option added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /__build_obj
 /PredictedInputCache_Debug_x86.dat
 /PredictedInputCache_Release_x86.dat
+/PredictedInputCache_Debug_x64.dat
+/PredictedInputCache_Release_x64.dat
