--- a/FBXModule/FBXModule.vcxproj
+++ b/FBXModule/FBXModule.vcxproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\FBXAnimation.hpp" />
+    <ClInclude Include="..\include\FBXAssign.hpp" />
     <ClInclude Include="..\include\FBXBase.hpp" />
     <ClInclude Include="..\include\FBXBone.hpp" />
     <ClInclude Include="..\include\FBXMesh.hpp" />
@@ -48,7 +49,6 @@
     <ClInclude Include="..\include\FBXNode.hpp" />
     <ClInclude Include="..\include\FBXSkinnedMesh.hpp" />
     <ClInclude Include="..\include\FBXType.hpp" />
-    <ClInclude Include="def.h" />
     <ClInclude Include="FBXShared.h" />
     <ClInclude Include="FBXUtilites.h" />
     <ClInclude Include="stdafx.h" />
