--- a/FBXModule/FBXModule.vcxproj.filters
+++ b/FBXModule/FBXModule.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClCompile Include="FBXShared_Mesh.cpp" />
     <ClCompile Include="FBXShared_Skin.cpp" />
     <ClCompile Include="FBXShared_Animation.cpp" />
+    <ClCompile Include="FBXShared.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -46,6 +47,15 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\include\FBXAssign.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\FBXRoot.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\FBXUtilites.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\FBXAllocate.hpp">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
