fbx export module added

--- a/FBXModule/FBXModule.vcxproj
+++ b/FBXModule/FBXModule.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="FBXModule_Scene.cpp" />
     <ClCompile Include="FBXShared.cpp" />
     <ClCompile Include="FBXShared_Animation.cpp" />
+    <ClCompile Include="FBXShared_Bone.cpp" />
     <ClCompile Include="FBXShared_FbxSdk.cpp" />
     <ClCompile Include="FBXShared_Error.cpp" />
     <ClCompile Include="FBXShared_Mesh.cpp" />
