--- a/FBXModule/FBXModule.vcxproj
+++ b/FBXModule/FBXModule.vcxproj
@@ -30,13 +30,13 @@
     <ClCompile Include="FBXShared_Animation.cpp" />
     <ClCompile Include="FBXShared_Bone.cpp" />
     <ClCompile Include="FBXShared_BoneCombination.cpp" />
+    <ClCompile Include="FBXShared_Converter.cpp" />
     <ClCompile Include="FBXShared_FbxSdk.cpp" />
     <ClCompile Include="FBXShared_Error.cpp" />
     <ClCompile Include="FBXShared_Mesh.cpp" />
     <ClCompile Include="FBXShared_Node.cpp" />
     <ClCompile Include="FBXShared_Optimizer.cpp" />
     <ClCompile Include="FBXShared_Skin.cpp" />
-    <ClCompile Include="FBXUtilites_Hierarchy.cpp" />
     <ClCompile Include="FBXUtilites_IO.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
