--- a/FBXModule/FBXModule.vcxproj
+++ b/FBXModule/FBXModule.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="..\include\FBXUtilites.hpp" />
     <ClInclude Include="FBXShared.h" />
     <ClInclude Include="FBXUtilites.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -69,6 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FBXMath.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FBXModule.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
