--- a/FBXModule/FBXModule.vcxproj.filters
+++ b/FBXModule/FBXModule.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="..\include\FBXModulePreDef.hpp">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\FBXModuleBind.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
