--- a/FBXModule/FBXModule.vcxproj.filters
+++ b/FBXModule/FBXModule.vcxproj.filters
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FBXMath.h" />
+    <None Include="FBXModule.def" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FBXModule.rc" />
